client: Fix header overlapping content
Added responsive breakpoint variables.

--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -2,3 +2,8 @@ $foreground-light: #171717;
 $background-light: #ffffff;
 $foreground-dark: #0a0a0a;
 $background-dark: #ededed;
+
+$phone-sm: 420px;
+$phone: 767px;
+$tablet-lg: 1024px;
+$desktop-lg: 1202px;
